--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </p>
                 
                 <ul class="benefits-list">
-                    <li>Сотни мастеров на выбор</li>
+                    <li>Сотни разных мастеров</li>
                     <li>Отклики в течение 15 минут</li>
                     <li>Все виды ремонта и услуг</li>
                     <li>Реальные отзывы о мастерах</li>
