--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <section class="footer-cta">
         <h2 class="footer-cta-title">Присоединяйся прямо сейчас!</h2>
         <p class="footer-cta-text">
-            Тысячи мастеров и клиентов уже находят друг друга в нашем канале. 
+            Сотни мастеров и клиентов уже находят друг друга в нашем канале. 
             Подпишись и начни получать заказы или найди своего мастера уже сегодня.
         </p>
         <a href="https://t.me/mastera_irkutska_bot" 
