--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://yourdomain.com/">
   <meta property="og:title" content="Мастера Иркутска — Заказы и Исполнители">
-  <meta property="og:description" content="Нужен мастер в Иркутске? Закажите за 3 клика. Мастерам — стабильные заказы. Без посредников.">
+  <meta property="og:description" content="Нужен мастер в Иркутске? Закажите в три клика. Мастерам — стабильные заказы. Без посредников.">
   <meta property="og:image" content="https://yourdomain.com/social-preview.jpg">
 
   <!-- Twitter Card -->
