--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
   <footer>
     <p class="footer-text">
-      © 2026 Мастера Иркутска • Telegram канал для профессионалов • 
+      © 2026 Telegram канал для профессионалов • Мастера Иркутска •
       <a href="https://t.me/mastera_irkutska_bot" class="footer-link">@mastera_irkutska_bot</a>
     </p>
   </footer>
