--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <li><strong>20-50 заказов в неделю</strong> в вашем районе</li>
             <li><strong>0% комиссии</strong> — весь заработок остается у вас</li>
             <li><strong>Выбирайте заявки</strong> по цене, району и времени</li>
-            <li><strong>Моментальная связь</strong> с заказчиком через Telegram</li>
+            <li><strong>Моментальная связь</strong> с заказчиком через Telegram + телефон</li>
             <li><strong>Рейтинг и отзывы</strong> — ваша репутация работает на вас</li>
             <li><strong>Работай на себя</strong> — никаких начальников и графиков</li>
           </ul>
