--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
              class="cta-button cta-masters"
              onclick="ym(106537206, 'reachGoal', 'click_masters'); return true;">
             <span class="cta-main">Получать заказы</span>
-            <span class="cta-sub">Регистрация за 2 минуты</span>
+            <span class="cta-sub">Быстрый старт</span>
           </a>
         </div>
 
