--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <section class="footer-cta">
       <h2 class="footer-cta-title">Присоединяйтесь прямо сейчас!</h2>
       <p class="footer-cta-text">
-        Сотни мастеров и клиентов уже находят друг друга в нашем сообществе.<br>Подпишитесь и получайте заказы или найдите специалиста сегодня.</p>
+        Сотни мастеров и клиентов в нашем сообществе.<br>Подпишитесь и получайте заказы или найдите специалиста сегодня.</p>
       <a href="https://t.me/mastera_irkutska_bot" 
          class="cta-button cta-footer"
          onclick="ym(106537206, 'reachGoal', 'click_footer'); return true;">
