--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="section-card">
           <div class="section-icon">🔧</div>
           <h2 class="section-title">Работайте когда вам удобно</h2>
-          <p class="section-tagline">Заказы каждый день • Выбирайте сами • Никаких комиссий</p>
+          <p class="section-tagline">Заказы каждый день • Выбирайте сами • Никаких комиссий • Жми «Я мастер»</p>
           
           <ul class="benefits-list">
             <li><strong>20-50 заказов в неделю</strong> в вашем районе</li>
@@ -128,7 +128,7 @@
         <div class="section-card">
           <div class="section-icon">🏠</div>
           <h2 class="section-title">Найдите мастера в три клика</h2>
-          <p class="section-tagline">Мастера с опытом • Гарантия качества • Выезд сегодня</p>
+          <p class="section-tagline">Мастера с опытом • Гарантия качества • Выезд сегодня • Жми «Нужен мастер»</p>
           
           <ul class="benefits-list">
             <li><strong>200+ проверенных мастеров</strong> онлайн прямо сейчас</li>
