--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <footer>
     <p class="footer-text">
       © 2026 Мастера Иркутска • Telegram канал для профессионалов • 
-      <a href="https://t.me/mastera_irkutska_bot" class="footer-link">@mastera_irkutska_bot</a>
+      <a href="@mastera_irkutska_bot" class="footer-link">@mastera_irkutska_bot</a>
     </p>
   </footer>
 
