--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <li><strong>Отклик за 30 минут</strong> — обычно находим быстрее</li>
         <li><strong>30+ категорий услуг</strong> — сантехника, электрика, ремонт, отделка</li>
         <li><strong>Прозрачные цены</strong> — мастера указывают точную стоимость</li>
-        <li><strong>100% бесплатно</strong> — никаких платежей за заявку</li>
+        <li><strong>100% бесплатно</strong> — никаких скрытых платежей за заявку</li>
         <li><strong>Безопасность</strong> — проверенные специалисты с портфолио</li>
         <li><strong>Жми «Нужен мастер»</strong> — мастер за 15 минут</li>
       </ul>
