--- a/index.html
+++ b/index.html
@@ -162,15 +162,16 @@
       <h2 class="footer-cta-title">Присоединяйтесь прямо сейчас!</h2>
       <p class="footer-cta-text">
         Сотни мастеров и клиентов в нашем сообществе.<br>Получайте заказы или 
-        найдите нужного специалиста сегодня.<br>P.S. Сохрани ссылку — вдруг 
-        завтра потечёт батарея или отвалится розетка.<br>Лучше знать, куда 
-        написать, чем искать!
-      </p>
+        найдите нужного специалиста сегодня.</p>
       <a href="https://t.me/mastera_irkutska_bot" class="cta-button cta-footer"
         onclick="ym(106537206, 'reachGoal', 'click_footer'); return true;">
         <span class="cta-main">Присоединиться</span>
         <span class="cta-sub">Уже 2000+ человек с нами</span>
       </a>
+      <p class="footer-cta-text">
+        P.S. Сохрани ссылку — вдруг 
+        завтра потечёт батарея или отвалится розетка.<br>Лучше знать, куда 
+        написать, чем искать!</p>
     </section>
   </main>
 
