--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <li><strong>20-50 заказов в неделю</strong> — в вашем районе</li>
             <li><strong>0% комиссии</strong> — весь заработок остается у вас</li>
             <li><strong>Выбирайте заявки</strong> — по цене, району и времени</li>
-            <li><strong>Моментальная связь</strong> — через Telegram + телефон</li>
+            <li><strong>Моментальная связь</strong> — с заказчиком через Telegram + телефон</li>
             <li><strong>Рейтинг и отзывы</strong> — ваша репутация работает на вас</li>
             <li><strong>Работай на себя</strong> — никаких начальников и графиков</li>
             <li><strong>Кнопка «Я мастер»</strong> — добро пожаловать в команду</li>
@@ -162,16 +162,15 @@
       <h2 class="footer-cta-title">Присоединяйтесь прямо сейчас!</h2>
       <p class="footer-cta-text">
         Сотни мастеров и клиентов в нашем сообществе.<br>Получайте заказы или 
-        найдите нужного специалиста сегодня.</p>
+        найдите нужного специалиста сегодня.<br>P.S. Сохрани ссылку — вдруг 
+        завтра потечёт батарея или отвалится розетка.<br>Лучше знать, куда 
+        написать, чем искать!
+      </p>
       <a href="https://t.me/mastera_irkutska_bot" class="cta-button cta-footer"
         onclick="ym(106537206, 'reachGoal', 'click_footer'); return true;">
         <span class="cta-main">Присоединиться</span>
         <span class="cta-sub">Уже 2000+ человек с нами</span>
       </a>
-      <p class="footer-cta-tex">
-        P.S. Сохрани ссылку — вдруг 
-        завтра потечёт батарея или отвалится розетка.<br>Лучше знать, куда 
-        написать, чем искать!</p>
     </section>
   </main>
 
