--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO -->
-  <title>Найти мастера в Иркутске за 15 минут | Ремонт, Сантехника, Электрика без посредников</title>
+  <title>Найти мастера в Иркутске в короткие сроки | Ремонт, Сантехника, Электрика без посредников</title>
   <meta name="description"content="200+ проверенных мастеров в Иркутске: сантехники, электрики, отделочники. Отклики за 15 минут, без комиссии. Уже 2000+ успешных заказов. Telegram-бот для быстрого поиска.">
   <meta name="author" content="Мастера Иркутска">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mastera-irkutska.ru/">
   <meta property="og:title" content="Мастера Иркутска — Заказы и Исполнители">
-  <meta property="og:description"content="200+ проверенных мастеров в Иркутске. Отклики за 15 минут. Без посредников и комиссий.">
+  <meta property="og:description"content="200+ проверенных мастеров в Иркутске. Отклики за 30 минут. Без посредников и комиссий.">
   <meta property="og:image" content="https://mastera-irkutska.ru/image/og-preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
