--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <!-- SEO -->
   <title>Найти мастера в Иркутске в короткие сроки | Ремонт, Сантехника, Электрика без посредников</title>
-  <meta name="description"content="200+ проверенных мастеров в Иркутске: сантехники, электрики, отделочники. Отклики за 15 минут, без комиссии. Уже 2000+ успешных заказов. Telegram-бот для быстрого поиска.">
+  <meta name="description"
+    content="200+ проверенных мастеров в Иркутске: сантехники, электрики, отделочники. Отклики за 15 минут, без комиссии. Уже 2000+ успешных заказов. Telegram-бот для быстрого поиска.">
   <meta name="author" content="Мастера Иркутска">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
@@ -15,7 +16,8 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mastera-irkutska.ru/">
   <meta property="og:title" content="Мастера Иркутска — Заказы и Исполнители">
-  <meta property="og:description"content="200+ проверенных мастеров в Иркутске. Отклики за 30 минут. Без посредников и комиссий.">
+  <meta property="og:description"
+    content="200+ проверенных мастеров в Иркутске. Отклики за 30 минут. Без посредников и комиссий.">
   <meta property="og:image" content="https://mastera-irkutska.ru/image/og-preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -35,11 +37,6 @@
   <link rel="icon" type="image/png" sizes="512x512" href="image/web-app-manifest-512x512.png">
   <link rel="icon" type="image/png" sizes="192x192" href="image/web-app-manifest-192x192.png">
   <link rel="manifest" href="/site.webmanifest">
-  
-  <!-- Fonts - только Bebas Neue с Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
   <!-- Яндекс.Метрика -->
   <script type="text/javascript">
@@ -89,15 +86,15 @@
       <!-- Статистика -->
       <div class="stats">
         <div class="stat-item">
-          <div class="stat-number">200+</div>
+          <div class="stat-number" data-target="200" data-suffix="+">0+</div>
           <div class="stat-label">Проверенных мастеров</div>
         </div>
         <div class="stat-item">
-          <div class="stat-number">1290+</div>
+          <div class="stat-number" data-target="1290" data-suffix="+">0+</div>
           <div class="stat-label">Успешных заказов</div>
         </div>
         <div class="stat-item">
-          <div class="stat-number">30 мин</div>
+          <div class="stat-number" data-target="30" data-suffix=" мин">0 мин</div>
           <div class="stat-label">Средний отклик</div>
         </div>
       </div>
@@ -106,7 +103,7 @@
     <!-- Секции для мастеров и клиентов -->
     <div class="sections-container">
       <div class="split-sections">
-        
+
         <!-- Секция для клиентов -->
         <div class="section-card">
           <div class="section-icon">🏠</div>
@@ -140,7 +137,7 @@
             <li><strong>20-50 заказов в неделю</strong> — в вашем районе</li>
             <li><strong>0% комиссии</strong> — весь заработок остается у вас</li>
             <li><strong>Выбирайте заявки</strong> — по цене, району и времени</li>
-            <li><strong>Моментальная связь</strong> — с заказчиком через Telegram + телефон</li>
+            <li><strong>Моментальная связь</strong> — через Telegram + телефон</li>
             <li><strong>Рейтинг и отзывы</strong> — ваша репутация работает на вас</li>
             <li><strong>Работай на себя</strong> — никаких начальников и графиков</li>
             <li><strong>Кнопка «Я мастер»</strong> — добро пожаловать в команду</li>
