--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
 
   <!-- Шапка -->
   <header>
-    <div class="logo">Мастера Иркутска</div>
-    <div class="subtitle">// Telegram — канал для профессионалов</div>
+    <div class="logo">
+      <img src="logo-removebg-preview.png" alt="Мастера Иркутска" class="logo-image">
+      <div class="logo-text">
+        <div class="logo-title">Мастера Иркутска</div>
+        <div class="subtitle">// Telegram — канал для профессионалов</div>
+      </div>
+    </div>
   </header>
 
   <!-- Основной контент -->
