--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- SEO -->
   <title>Найти мастера в Иркутске в короткие сроки | Ремонт, Сантехника, Электрика без посредников</title>
   <meta name="description"
-    content="200+ проверенных мастеров в Иркутске: сантехники, электрики, отделочники. Отклики за 15 минут, без комиссии. Уже 2000+ успешных заказов. Telegram-бот для быстрого поиска.">
+    content="299+ проверенных мастеров в Иркутске: сантехники, электрики, отделочники. Отклики за 15 минут, без комиссии. Уже 2000+ успешных заказов. Telegram-бот для быстрого поиска.">
   <meta name="author" content="Мастера Иркутска">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
 
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://mastera-irkutska.ru/">
   <meta property="og:title" content="Мастера Иркутска — Заказы и Исполнители">
   <meta property="og:description"
-    content="200+ проверенных мастеров в Иркутске. Отклики за 30 минут. Без посредников и комиссий.">
+    content="299+ проверенных мастеров в Иркутске. Отклики за 30 минут. Без посредников и комиссий.">
   <meta property="og:image" content="https://mastera-irkutska.ru/image/og-preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -76,6 +76,14 @@
         <div class="subtitle">// Telegram — канал для профессионалов</div>
       </div>
     </div>
+    
+    <!-- Счетчик онлайн мастеров -->
+    <div class="online-counter">
+      <span class="online-indicator"></span>
+      <span class="online-text">
+        Сейчас онлайн: <strong class="online-count" data-base="87">87</strong> мастеров
+      </span>
+    </div>
   </header>
 
   <!-- Основной контент -->
@@ -116,7 +124,7 @@
           <p class="section-tagline">Мастера с опытом • Гарантия качества • Выезд сегодня</p>
 
           <ul class="benefits-list">
-            <li><strong>200+ проверенных мастеров</strong> — онлайн прямо сейчас</li>
+            <li><strong>299+ проверенных мастеров</strong> — онлайн прямо сейчас</li>
             <li><strong>Отклик за 30 минут</strong> — обычно находим быстрее</li>
             <li><strong>30+ категорий услуг</strong> — сантехника, электрика, ремонт, отделка</li>
             <li><strong>Прозрачные цены</strong> — мастера указывают точную стоимость</li>
