--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
   </script>
 
   <!-- Scripts -->
-  <script src="script.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <script src="script.min.js"></script>
+  <link rel="stylesheet" href="style.min.css">
 </head>
 
 <body>
@@ -207,7 +207,18 @@
 
         <!-- Секция для клиентов -->
         <div class="section-card">
-          <div class="section-icon">🏠</div>
+          <div class="section-icon icon-clients">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="11" cy="11" r="8" stroke="url(#gradient-green)" stroke-width="2"/>
+              <path d="M21 21L16.65 16.65" stroke="url(#gradient-green)" stroke-width="2" stroke-linecap="round"/>
+              <defs>
+                <linearGradient id="gradient-green" x1="0%" y1="0%" x2="100%" y2="100%">
+                  <stop offset="0%" style="stop-color:#06FFA5;stop-opacity:1" />
+                  <stop offset="100%" style="stop-color:#00D488;stop-opacity:1" />
+                </linearGradient>
+              </defs>
+            </svg>
+          </div>
           <h2 class="section-title">Найдите мастера в короткие сроки</h2>
           <p class="section-tagline">Мастера с опытом • Гарантия качества • Выезд сегодня</p>
 
@@ -230,7 +241,21 @@
 
         <!-- Секция для мастеров -->
         <div class="section-card">
-          <div class="section-icon">🔧</div>
+          <div class="section-icon icon-masters">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect x="3" y="3" width="18" height="18" rx="2" stroke="url(#gradient-yellow)" stroke-width="2"/>
+              <path d="M7 8H17M7 12H17M7 16H13" stroke="url(#gradient-yellow)" stroke-width="2" stroke-linecap="round"/>
+              <circle cx="5" cy="8" r="1" fill="url(#gradient-yellow)"/>
+              <circle cx="5" cy="12" r="1" fill="url(#gradient-yellow)"/>
+              <circle cx="5" cy="16" r="1" fill="url(#gradient-yellow)"/>
+              <defs>
+                <linearGradient id="gradient-yellow" x1="0%" y1="0%" x2="100%" y2="100%">
+                  <stop offset="0%" style="stop-color:#FDB913;stop-opacity:1" />
+                  <stop offset="100%" style="stop-color:#FF9800;stop-opacity:1" />
+                </linearGradient>
+              </defs>
+            </svg>
+          </div>
           <h2 class="section-title">Работайте когда вам удобно</h2>
           <p class="section-tagline">Заказы каждый день • Выбирайте сами • Никаких комиссий</p>
 
