--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               </defs>
             </svg>
           </div>
-          <h2 class="section-title">Работайте когда вам удобно</h2>
+          <h2 class="section-title">Станьте партнёром нашего сервиса</h2>
           <p class="section-tagline">Заказы каждый день • Выбирайте сами • Никаких комиссий</p>
 
           <ul class="benefits-list">
