--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mastera-irkutska.ru/">
   <meta property="og:title" content="Мастера Иркутска — Заказы и Исполнители">
-  <meta property="og:description"
-    content="Найдите мастера в Иркутске за 15 минут. 49+ специалистов. Без посредников и комиссий. Прямая связь в Telegram.">
+  <meta property="og:description" content="Найдите мастера в Иркутске за 15 минут. 49+ специалистов. Без посредников и комиссий. Прямая связь в Telegram.">
   <meta property="og:image" content="https://mastera-irkutska.ru/image/og-preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
